--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -3,101 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Order Summary</title>
     <style>
-        /* External CSS for better organization and maintainability */
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); /* Import Poppins font */
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f5f5f5; /* Light background color */
+        @font-face {
+           font-family: 'Inter';
+           font-style: normal;
+           font-weight: 100 900;
+           font-display: swap;
+           src: url(https://fonts.gstatic.com/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2) format('woff2');
+           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
-        table {
-            width: 600px;
-            margin: 20px auto;
-            border-collapse: collapse;
-        }
+         body {
+             font-family: 'Inter', sans-serif;
+             background-color: #f5f5f5; /* Light background color */
+             color: #333;
+         }
 
-        .container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-        }
+         table {
+             width: 600px;
+             margin: 20px auto;
+             border-collapse: collapse;
+         }
 
-        .order-header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
+         .container {
+             background-color: #fff;
+             border-radius: 10px;
+             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+             padding: 30px;
+         }
 
-        .order-submessage {
-            text-align: center;
-            margin-bottom: 20px;
-        }
+         .order-header {
+             text-align: center;
+             margin-bottom: 20px;
+         }
 
-        .order-id {
-            font-size: 24px;
-            font-weight: 600;
-            color: #333;
-        }
+         .order-submessage {
+             text-align: center;
+             margin-bottom: 20px;
+         }
 
-        .order-details {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+         .order-id {
+             font-size: 24px;
+             font-weight: 600;
+             color: #333;
+         }
 
-        .order-details span {
-            font-weight: 600;
-        }
+         .order-details {
+             display: grid;
+             grid-template-columns: repeat(3, 1fr);
+             gap: 20px;
+             text-align: center;
+             margin-bottom: 20px;
+         }
 
-        .order-summary-title {
-            font-size: 12px;
-            font-weight: 600;
-            margin-bottom: 20px;
-            text-align: center;
-        }
+         .order-summary-title {
+             font-size: 12px;
+             font-weight: 600;
+             margin-bottom: 20px;
+             text-align: center;
+         }
 
-        .book-item {
-            display: flex;
-            align-items: center;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
-        }
+         .book-item {
+             display: flex;
+             align-items: center;
+             padding: 15px;
+             border-bottom: 1px solid #ddd;
+         }
 
-        .book-image {
-            width: 80px;
-            height: 120px;
-            object-fit: cover;
-            border-radius: 5px;
-            margin-right: 20px;
-        }
+         .book-image {
+             width: 80px;
+             height: 120px;
+             object-fit: cover;
+             border-radius: 5px;
+             margin-right: 20px;
+         }
 
-        .book-details {
-            flex-grow: 1;
-        }
+         .book-details {
+             flex-grow: 1;
+         }
 
-        .book-title {
-            font-size: 16px;
-            font-weight: 500;
-            margin-bottom: 5px;
-        }
+         .book-title {
+             font-size: 16px;
+             font-weight: 600;
+             margin-bottom: 5px;
+         }
 
-        .book-author {
-            font-size: 14px;
-            color: #666;
-        }
+         .book-author {
+             font-size: 14px;
+             color: #666;
+         }
 
-        .book-quantity {
-            font-weight: 500;
-        }
+         .book-quantity {
+             font-weight: 500;
+         }
 
-        .font-bold {
-            font-weight: 600;
-        }
+         .font-bold {
+             font-weight: 600;
+         }
+
+         .invoice-message {
+             text-align: center;
+             font-size: 12px;
+             padding-left: 2rem;
+             padding-right: 2rem;
+             padding-top: 1rem;
+         }
+
     </style>
 </head>
 <body>
@@ -142,6 +155,11 @@
                             <p class="book-author" th:text="${book.author}"></p>
                         </div>
                     </div>
+                </div>
+
+                <div class="invoice-message">
+                    <p>Thank you for your order! Please note that this email serves as your receipt for picking up your books</p>
+                    <p>If you have any questions or require further assistance, please don't hesitate to contact us.</p>
                 </div>
             </div>
         </td>
