Added email notifications for one day reminder, overdue. Also modified endpoint for editing book details to allow re-uploading of book image.

--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="invoice-message">
-                    <p>Thank you for your order! Please note that this email serves as your receipt for picking up your books</p>
+                    <p>Thank you for your order! Please note that this email serves as your receipt for picking up your books.</p>
                     <p>If you have any questions or require further assistance, please don't hesitate to contact us.</p>
                 </div>
             </div>
